force-app/main/default/objects/Opportunity/fields/Opportunity_Contributor__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Contributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Contributor</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <filterItems>
            <field>User.Division</field>
            <operation>contains</operation>
            <value>BDR</value>
        </filterItems>
        <filterItems>
            <field>User.Division</field>
            <operation>contains</operation>
            <value>Success</value>
        </filterItems>
        <filterItems>
            <field>User.Division</field>
            <operation>contains</operation>
            <value>SaaS</value>
        </filterItems>
        <filterItems>
            <field>User.Division</field>
            <operation>contains</operation>
            <value>Playable</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>