force-app/main/default/objects/Opportunity/fields/Opportunity_is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity is Locked</label>
    <type>Checkbox</type>
</CustomField>