force-app/main/default/objects/Opportunity/fields/Opportunity_Link__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Link__c</fullName>
    <formula>&quot;https://brameag2--sandboxad.sandbox.lightning.force.com/lightning/r/Opportunity/&quot;
&amp; CASESAFEID(Id)
&amp; &quot;/view&quot;</formula>
    <label>Opportunity Link</label>
    <type>Text</type>
</CustomField>