force-app/main/default/objects/Opportunity/fields/Order_Confirmation_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Order_Confirmation_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Confirmation Uploaded?</label>
    <type>Checkbox</type>
</CustomField>