force-app/main/default/objects/Opportunity/fields/Own_Appointment_Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>Own_Appointment_Commission_Value__c</fullName>
    <inlineHelpText>Eligible commission value for members of the BDR Team for all qualified appointments from own outreach</inlineHelpText>
    <label>Own Appointment Commission Value</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>