force-app/main/default/objects/Opportunity/fields/Owners_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owners_Manager__c</fullName>
    <formula>Owner.Manager.FirstName&amp;&quot; &quot;&amp;Owner.Manager.LastName</formula>
    <label>Owners Manager</label>
    <type>Text</type>
</CustomField>