force-app/main/default/objects/Opportunity/fields/Parent_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity_Amount__c</fullName>
    <formula>ParentOpportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>