force-app/main/default/objects/Opportunity/fields/Parent_Opportunity_ARR__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity_ARR__c</fullName>
    <formula>ParentOpportunity__r.ARR_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Opportunity ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>