force-app/main/default/objects/Opportunity/fields/Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_ID__c</fullName>
    <label>Partner ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>