force-app/main/default/objects/Opportunity/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <inlineHelpText>Highlights when an invoice needs to be paid, how often, and if there are penalties for late payments.</inlineHelpText>
    <label>Payment Terms</label>
    <type>TextArea</type>
</CustomField>