force-app/main/default/objects/Opportunity/fields/Pipeline_Category__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Category__c</fullName>
    <label>Pipeline Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pipeline_Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Pipeline_Category</valueSetName>
    </valueSet>
</CustomField>