force-app/main/default/objects/Opportunity/fields/Pipeline_Source__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Source__c</fullName>
    <label>Pipeline Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pipeline_Source</valueSetName>
    </valueSet>
</CustomField>