force-app/main/default/objects/Opportunity/fields/Previous_Stage__c.field-meta.xml
<CustomField>
    <fullName>Previous_Stage__c</fullName>
    <label>Previous Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Discovery Call</fullName>
            </value>
            <value>
                <fullName>Need Qualification</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>2nd Follow Up</fullName>
            </value>
            <value>
                <fullName>Plan Strategy Workshop</fullName>
            </value>
            <value>
                <fullName>Strategy Workshop done</fullName>
            </value>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Offer (80%)</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>Backlog</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Appointment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>