force-app/main/default/objects/Opportunity/fields/Primary_Contact_assigned__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Contact assigned?</label>
    <type>Checkbox</type>
</CustomField>