force-app/main/default/objects/Opportunity/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Experience Pack</fullName>
            </value>
            <value>
                <fullName>Brame Basic</fullName>
            </value>
            <value>
                <fullName>Brame Starter</fullName>
            </value>
            <value>
                <fullName>Brame Business</fullName>
            </value>
            <value>
                <fullName>Brame Professional</fullName>
            </value>
            <value>
                <fullName>Brame Enterprise</fullName>
            </value>
            <value>
                <fullName>Tailor Made</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>1-Experience Pack</fullName>
            </value>
            <value>
                <fullName>Proof of Value (3 Games -3 Monate)</fullName>
            </value>
            <value>
                <fullName>Annual Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>