force-app/main/default/objects/Opportunity/fields/Publishing_eCPM_in_EUR__c.field-meta.xml
<CustomField>
    <fullName>Publishing_eCPM_in_EUR__c</fullName>
    <formula>Campaign_Costs_EUR__c /  Impressions_Delivered__c * 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>in EUR</inlineHelpText>
    <label>Publishing eCPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>