force-app/main/default/objects/Opportunity/fields/Team_Commission__c.field-meta.xml
<CustomField>
    <fullName>Team_Commission__c</fullName>
    <formula>IF(CONTAINS(&quot;Tailor_Made: Single_Campaign&quot;,TEXT(Type)), 0,0.02)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Commission %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>