force-app/main/default/objects/Opportunity/fields/Team_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Team_Commission_Amount__c</fullName>
    <formula>(Amount *   Team_Commission__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Revenue Amount the record Owners Manager is entitled to, based on the currently active Commission Model.</inlineHelpText>
    <label>Team Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>