force-app/main/default/objects/Opportunity/fields/Timing__c.field-meta.xml
<CustomField>
    <fullName>Timing__c</fullName>
    <inlineHelpText>In what time frame will they need a solution?</inlineHelpText>
    <label>Timing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>