force-app/main/default/objects/Opportunity/fields/totango__Totango_Online_Status__c.field-meta.xml
<CustomField>
    <fullName>totango__Totango_Online_Status__c</fullName>
    <formula>IF( CONTAINS( totango__Totango_isOnline__c , &quot;totango&quot;), IMAGE( totango__Totango_isOnline__c, &quot;N/A&quot;) , IMAGE(&quot;https://app.totango.com/images/emptyPixel.png&quot;,&quot;N/A&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totango Online Status Icon</label>
    <type>Text</type>
</CustomField>