force-app/main/default/objects/Opportunity/fields/totango__Totango_URL__c.field-meta.xml
<CustomField>
    <fullName>totango__Totango_URL__c</fullName>
    <description>URL to Totango Platform</description>
    <label>Totango URL</label>
    <type>Url</type>
</CustomField>