force-app/main/default/objects/Opportunity/fields/totango__TotangoActive_users_last_14_days__c.field-meta.xml
<CustomField>
    <fullName>totango__TotangoActive_users_last_14_days__c</fullName>
    <description>The number of unique active users that accessed the system in the last 14 days.</description>
    <label>Totango Active users (last 14 days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>