force-app/main/default/objects/Opportunity/fields/totango__TotangoEngagement__c.field-meta.xml
<CustomField>
    <fullName>totango__TotangoEngagement__c</fullName>
    <label>Totango Engagement</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>