force-app/main/default/objects/Opportunity/fields/totango__TotangoEngagementChange__c.field-meta.xml
<CustomField>
    <fullName>totango__TotangoEngagementChange__c</fullName>
    <label>Totango Engagement Change</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>