force-app/main/default/objects/Opportunity/fields/totango__TotangoInsights__c.field-meta.xml
<CustomField>
    <fullName>totango__TotangoInsights__c</fullName>
    <label>Totango Insights</label>
    <length>255</length>
    <type>Text</type>
</CustomField>