force-app/main/default/objects/Opportunity/fields/update__c.field-meta.xml
<CustomField>
    <fullName>update__c</fullName>
    <label>update</label>
    <length>40</length>
    <type>Text</type>
</CustomField>