force-app/main/default/objects/Opportunity/fields/X2nd_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Follow_Up_Date__c</fullName>
    <label>2nd Follow Up Date</label>
    <type>Date</type>
</CustomField>