force-app/main/default/objects/Opportunity/recordTypes/AddonOrServices.recordType-meta.xml
<RecordType>
    <fullName>AddonOrServices</fullName>
    <active>true</active>
    <businessProcess>Add-on%2FServices</businessProcess>
    <label>Add-on/Services</label>
</RecordType>