force-app/main/default/objects/Opportunity/recordTypes/EngagementAds.recordType-meta.xml
<RecordType>
    <fullName>EngagementAds</fullName>
    <active>true</active>
    <businessProcess>Engagement Ads</businessProcess>
    <label>Engagement Ads</label>
</RecordType>