force-app/main/default/objects/Opportunity/recordTypes/NewBusiness.recordType-meta.xml
<RecordType>
    <fullName>NewBusiness</fullName>
    <active>true</active>
    <businessProcess>New Business</businessProcess>
    <label>New Business</label>
</RecordType>