force-app/main/default/objects/Opportunity/recordTypes/ProofOfValue.recordType-meta.xml
<RecordType>
    <fullName>ProofOfValue</fullName>
    <active>true</active>
    <businessProcess>Proof of Value</businessProcess>
    <label>Proof of Value</label>
</RecordType>