force-app/main/default/objects/Opportunity/recordTypes/Upgrade.recordType-meta.xml
<RecordType>
    <fullName>Upgrade</fullName>
    <active>true</active>
    <businessProcess>Upgrade</businessProcess>
    <label>Upgrade</label>
</RecordType>