force-app/main/default/objects/Opportunity/validationRules/Account_Address_Info_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Address_Info_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR($UserRole.Name =&quot;Top Management&quot;,
$UserRole.Name =&quot;Salesforce Manager&quot;))

&amp;&amp;

AND(
ISPICKVAL(StageName, &quot;Offer&quot;),
OR(
ISBLANK(Account.BillingCity),
ISBLANK(Account.BillingCountry),
ISBLANK(Account.BillingStreet),
ISBLANK(Account.BillingPostalCode)
)
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>&quot;Cannot move Opportunity to Offer Stage without completing the required Account fields: Billing City, Billing Country, Billing Street, and Billing Postal Code.&quot;</errorMessage>
</ValidationRule>