force-app/main/default/objects/Opportunity/validationRules/Backlog.validationRule-meta.xml
<ValidationRule>
    <fullName>Backlog</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(StageName, &quot;Backlog&quot;),
ISBLANK( TEXT( Backlog_Reason__c ))
)</errorConditionFormula>
    <errorMessage>Please select a Backlog Reason in order to save the Backlog Status - a new task will be created automatically</errorMessage>
</ValidationRule>