force-app/main/default/objects/Opportunity/validationRules/Cant_Change_Stage_Probability.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Change_Stage_Probability</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(ISPICKVAL(StageName, &quot;Appointment&quot;),
       ISPICKVAL(StageName, &quot;No Show&quot;),
       ISPICKVAL(StageName, &quot;Backlog&quot;),
       ISPICKVAL(StageName, &quot;Closed Lost&quot;)
       ),
      Probability&gt;0.1)</errorConditionFormula>
    <errorDisplayField>Probability</errorDisplayField>
    <errorMessage>Probability can&apos;t be more than 10% for the choosen Stage</errorMessage>
</ValidationRule>