force-app/main/default/objects/Opportunity/validationRules/Cant_edit_Won_and_Lost_Opps.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_edit_Won_and_Lost_Opps</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISCHANGED(StageName)),
    OR( 
      ISPICKVAL(StageName, &quot;Closed Won&quot;),
      ISPICKVAL(StageName, &quot;Closed Lost&quot;)
      ),   
    NOT(ISNEW()), 
    $User.Division &lt;&gt; &quot;Sales Ops&quot;
   )</errorConditionFormula>
    <errorMessage>&apos;Closed Won&apos; and &apos;Closed Lost&apos; Opps can&apos;t be edited/changed.</errorMessage>
</ValidationRule>