force-app/main/default/objects/Opportunity/validationRules/CL_reopen_Opp_block.validationRule-meta.xml
<ValidationRule>
    <fullName>CL_reopen_Opp_block</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(StageName) &amp;&amp; 
ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Lost&quot;)</errorConditionFormula>
    <errorMessage>CL Opps cant be reopened!</errorMessage>
</ValidationRule>