force-app/main/default/objects/Opportunity/validationRules/Close_Lost_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Lost_Reason</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(StageName, &quot;Closed Lost&quot;),
OR(
ISBLANK( TEXT(Closed_Lost_Reason__c  ))))</errorConditionFormula>
    <errorMessage>Please add closed lost reason</errorMessage>
</ValidationRule>