force-app/main/default/objects/Opportunity/validationRules/Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Record_Type_Name__c &lt;&gt; &quot;Engagement Ads&quot;,
    ISPICKVAL(StageName, &quot;Closed Won&quot;),
    OR( 
        ISBLANK(TEXT(Account.Type)),
        AND(
            ISBLANK(TEXT(Account.Budgeting_time_1__c)),
            NOT(ISPICKVAL(Account.Budgeting_time_1__c, &quot;N/A&quot;))
        ),
        NOT(ISPICKVAL(Approval_Status__c ,&quot;Approved&quot;)),
        ISBLANK( Payment_Terms__c ),
        CountOfProducts__c == 0,
        ISBLANK( No_of_Primary_Contacts__c )
    )
)</errorConditionFormula>
    <errorMessage>This Opportunity can&apos;t be set as &apos;Closed Won&apos; until next conditions are met: Client Type and Budgeting Time on Account are required. This Opp must have Payment Terms, be Approved and at least one product and a Primary Contact must be added to the Opp.</errorMessage>
</ValidationRule>