force-app/main/default/objects/Opportunity/validationRules/Closed_Won_Contract_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won_Contract_Period</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR($UserRole.Name =&quot;Top Management&quot;,
$UserRole.Name =&quot;Salesforce Manager&quot;))

&amp;&amp;

AND(
ISPICKVAL(StageName, &quot;Closed Won&quot;),
OR(
ISBLANK( Contract_period_start__c ),
ISBLANK( Contract_period_end__c )
)
)</errorConditionFormula>
    <errorMessage>Please select the Contract Period Start and End dates before move it the Closed Won Status</errorMessage>
</ValidationRule>