force-app/main/default/objects/Opportunity/validationRules/Committed_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Committed_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(StageName, &quot;Committed&quot;),

OR(
ISPICKVAL(Type, &quot;&quot;),
ISNULL(Amount),
ISBLANK( No_of_Primary_Contacts__c ),
CountOfProducts__c  = 0 
)

)</errorConditionFormula>
    <errorMessage>The Opportunity Stage cannot be set to &apos;&apos;Committed&apos;&apos; until there are Type, Primary Quote, and  Primary Contact added.</errorMessage>
</ValidationRule>