force-app/main/default/objects/Opportunity/validationRules/Data_Modification_Prevention_Closed_Opps.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_Modification_Prevention_Closed_Opps</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(OR(
$User.Division =&quot;Sales Ops&quot;,
$User.Department =&quot;Marketing&quot;,
$User.Department =&quot;Finance &amp; Legal&quot;
)),

OR( TEXT( PRIORVALUE(StageName) ) = &apos;Closed Won&apos;,
TEXT( PRIORVALUE(StageName) ) = &apos;Closed Lost&apos;
) ,

OR(
ISCHANGED( Invoice_Number__c ),
ISCHANGED( CountOfProducts__c ),
ISCHANGED( Contract_period_start__c ),
ISCHANGED( Contract_period_end__c ),
ISCHANGED(  Amount  ),
ISCHANGED( Products__c ),
AND(ISCHANGED( CloseDate ),  Close_Date_Locked__c ), 
ISCHANGED( StageName ),
ISCHANGED( LeadSource ),
ISCHANGED( Marketfit__c ),
ISCHANGED( Type )
)
)</errorConditionFormula>
    <errorMessage>&apos;Closed Won&apos; and &apos;Closed Lost&apos; Opportunities can&apos;t be edited/changed.</errorMessage>
</ValidationRule>