force-app/main/default/objects/Opportunity/validationRules/Discovery_Call.validationRule-meta.xml
<ValidationRule>
    <fullName>Discovery_Call</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR($UserRole.Name =&quot;Top Management&quot;,
$UserRole.Name =&quot;Salesforce Manager&quot;))

&amp;&amp;

AND(
OR (
ISPICKVAL(StageName, &quot;Discovery Call&quot;),
ISPICKVAL(StageName, &quot;Follow Up&quot;),
ISPICKVAL(StageName, &quot;2nd Follow Up&quot;),
ISPICKVAL(StageName, &quot;Backlog&quot;),
ISPICKVAL(StageName, &quot;Closed Won&quot;),
ISPICKVAL(StageName, &quot;Closed Lost&quot;)
),
OR(
ISBLANK( NextStep ),
ISBLANK( TEXT( Marketfit__c  )),
ISBLANK(Amount)
))</errorConditionFormula>
    <errorMessage>Please fill in all required fields in order to save the new stage Discovery Call:
Market Fit, Next Step, Amount</errorMessage>
</ValidationRule>