force-app/main/default/objects/Opportunity/validationRules/EA_Account_cant_be_Client_Direct.validationRule-meta.xml
<ValidationRule>
    <fullName>EA_Account_cant_be_Client_Direct</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Record_Type_Name__c = &quot;Playable Ads&quot;,
     Account.Name = &quot;Client Direct&quot; )</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>&apos;Client Direct&apos; can only be selected via the &apos;Related Account&apos; field.</errorMessage>
</ValidationRule>