force-app/main/default/objects/Opportunity/validationRules/EA_Account_equal_Agency_error.validationRule-meta.xml
<ValidationRule>
    <fullName>EA_Account_equal_Agency_error</fullName>
    <active>true</active>
    <errorConditionFormula>Account.Id = Related_Account__r.Id</errorConditionFormula>
    <errorDisplayField>Related_Account__c</errorDisplayField>
    <errorMessage>Account and Related Account CAN NOT be the same.</errorMessage>
</ValidationRule>