force-app/main/default/objects/Opportunity/validationRules/EA_Campaign_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>EA_Campaign_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Campaign_End_Date__c &lt; Campaign_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Campaign_End_Date__c</errorDisplayField>
    <errorMessage>Campaign End Date can&apos;t be BEFORE the Campaign Start Date</errorMessage>
</ValidationRule>