force-app/main/default/objects/Opportunity/validationRules/EA_Comitted_Stage_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>EA_Comitted_Stage_fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Record_Type_Name__c = &quot;Playable Ads&quot;,
     ISPICKVAL(StageName, &quot;Committed&quot;),
     OR(
        ISBLANK(TEXT( Country__c )),
        ISBLANK( Campaign_Start_Date__c ),
        ISBLANK( Campaign_End_Date__c ),
        ISBLANK( CloseDate ),
        ISBLANK( CPM__c ),
        ISBLANK( Creative_Type__c ),
        ISBLANK( Creative_Languages__c ),
        ISBLANK( Creatives_in_Total__c ),
        ISBLANK( TEXT(Design_Resources_Needed__c )),
        ISBLANK( TEXT(Dev_Resources_Needed__c )),
        ISBLANK( SBQQ__PrimaryQuote__c ),
        ISNULL( SBQQ__PrimaryQuote__c ),
        ISBLANK(  No_of_Primary_Contacts__c )
        )
)</errorConditionFormula>
    <errorMessage>Opps in the &quot;Committed&quot; Stage must have the next fields populated:
CPM, Close Date, Creative Type, Creative Languages, Creatives in Total, Design Resources needed, Dev. Resources Needed, Primary Quote &amp; Primary Contact</errorMessage>
</ValidationRule>