force-app/main/default/objects/Opportunity/validationRules/EA_DiscoCall_FollowUp_Stage_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>EA_DiscoCall_FollowUp_Stage_fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Record_Type_Name__c = &quot;Playable Ads&quot;,
     OR(
     ISPICKVAL(StageName, &quot;Discovery Call&quot;),
     ISPICKVAL(StageName, &quot;Follow Up&quot;)
       ),
     OR(
        ISBLANK(TEXT( Country__c )),
        ISBLANK( Campaign_Start_Date__c ),
        ISBLANK( Campaign_End_Date__c )
        )
)</errorConditionFormula>
    <errorMessage>Please populate the following fields for the &apos;Discovery Call&apos; or &apos;Follow Up&apos; Stage:
Country, Campaign Start &amp; End Date</errorMessage>
</ValidationRule>