force-app/main/default/objects/Opportunity/validationRules/EA_Offer_Accepted_Stage_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>EA_Offer_Accepted_Stage_fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Record_Type_Name__c = &quot;Playable Ads&quot;,
     ISPICKVAL(StageName, &quot;Offer Accepted&quot;),
     OR(
        ISBLANK(TEXT( Country__c )),
        ISBLANK( Campaign_Start_Date__c ),
        ISBLANK( Campaign_End_Date__c ),
        ISBLANK( CloseDate ),
        ISBLANK( CPM__c ),
        ISBLANK( Creative_Type__c ),
        ISBLANK( Creative_Languages__c ),
        ISBLANK( Creatives_in_Total__c ),
        ISBLANK( TEXT(Design_Resources_Needed__c )),
        ISBLANK( TEXT(Dev_Resources_Needed__c )),
        ISBLANK( SBQQ__PrimaryQuote__c ),
        ISNULL( SBQQ__PrimaryQuote__c ),
        ISBLANK( No_of_Primary_Contacts__c ),
        ISBLANK( Finance_Contact__c ),
        Order_Confirmation_Uploaded__c = FALSE
        )
)</errorConditionFormula>
    <errorMessage>Opps in the &quot;Offer Accepted&quot; Stage must have the following data:
Primary Quote, Finance Contact &amp; Primary Contact, Document of the Signed Order Confirmation is Uploaded and all fields from previous Stages populated as well.</errorMessage>
</ValidationRule>